kubectl support: add discovery apis
